# ASAP

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: 01_SA-SPD_proposal.html  02_implementation_plan.md
docs/paper/: 00_abstract.md  01_introduction.md  02_related_work.md  03_method.md  04_experiments.md  05_conclusion.md  README.md  detector_selection.md  experiments_overview.html  references.bib
docs/references/: README.md
scripts/: create_asap_env.sh  download_kitti_imagesets.sh  download_kitti_object.sh  generate_kitti_infos.sh  prepare_kitti.sh  setup_openpcdet_backend.sh  verify_kitti_imagesets.py  verify_kitti_object.py  verify_openpcdet_env.py
